test/negative/008_neg_unsigned_literal.fx
// expect: unsigned
val a = -5u8
println(a)
