test/negative/008_neg_unsigned_literal.err
008_neg_unsigned_literal.fx:2:10: error: '-' in front of unsigned integer literal
